--- a/index.html
+++ b/index.html
@@ -162,16 +162,17 @@ Smartphone Compatible web template, free webdesigns for Nokia, Samsung, LG, Sony
         <h3 class="tittle wel"><a href="about.html">Présentation de Garderie Toutou</a></h3>
         <div class="about-top">
             <div class="col-md-7 about-top-right">
+                <br><br>
                 <h4>De plus en plus de personnes font confiance à Garderie Toutou, alors vous aussi n'ayez pas peur de
                     nous faire confiance.</h4>
                 <p>Garderie Toutou est une garderie présente depuis peu mais qui possède de plus en plus d'utilisateur !
                     De nouveaux chiens arrivent chaque jour et augmentent notre communauté, disponnible et fiable, avec
                     des conseiller de qualité !</p>
-                <p>Des milliers de dog sitters sur Garderie Toutou seraient ravis de s'occuper de votre chien les jours
-                    où vous êtes au travail ou indisponible.
-                    Réservez une garderie (ou plusieurs) avec votre dog sitter favori. Déposez votre chien au domicile
-                    du dog sitter, qui s'occupera de le
-                    sortir faire ses besoins, de jouer avec lui et de lui offrir toute l'attention qu'il mérite. </p>
+
+                <br>
+                <div align="center">
+                    <button type="button" class="btn btn-info"><a href="about.html" style="color: #fff">En savoir plus</a></button>
+                </div>
             </div>
             <div class="col-md-5 about-top-left">
                 <img src="images/ab.jpg" class="img-responsive" alt=""/>
@@ -250,6 +251,51 @@ Smartphone Compatible web template, free webdesigns for Nokia, Samsung, LG, Sony
     <path id="trianglePath5" d="M0 0 L50 100 L100 0 Z"></path>
     <path id="trianglePath6" d="M50 100 L100 40 L100 0 Z"></path>
 </svg>
+
+<!--start-breed-section-->
+<div class="breed-section">
+    <div class="container">
+        <h3 class="tittle two"><a href="services.html">Services Disponnible</a></h3>
+        <div class="serve-grids">
+            <div class="col-md-5 service-img">
+                <img src="images/b-service.jpg" class="img-responsive" alt=""/>
+            </div>
+            <div class="col-md-7 serve-text">
+                <h4>Les services disponnible chez Garderie Toutou</h4>
+                <p>Garderie Toutou est une communauté et donc possède de nombreux passionnés qui pourront vous aidez et
+                    vous conseillez sur des services divers et variés tel que : </p>
+                <div class="col-md-6 service-grid">
+                    <ul>
+                        <li><a href="#"><i class="glyphicon glyphicon-forward"></i></a>Toilettage</li>
+                        <li><a href="#"><i class="glyphicon glyphicon-forward"></i></a>Promenades</li>
+                        <li><a href="#"><i class="glyphicon glyphicon-forward"></i></a>Conseil vétérinaire</li>
+                    </ul>
+
+                </div>
+                <div class="col-md-6 service-grid">
+                    <ul>
+                        <li><a href="#"><i class="glyphicon glyphicon-forward"></i></a>Gardiennage</li>
+                        <li><a href="#"><i class="glyphicon glyphicon-forward"></i></a>Coach de remise en forme</li>
+                        <li><a href="#"><i class="glyphicon glyphicon-forward"></i></a>Education</li>
+                    </ul>
+
+                </div>
+                <div class="clearfix"></div>
+            </div>
+            <br>
+            <div align="center">
+                <button type="button" class="btn btn-light"><a href="services.html">En savoir plus</a></button>
+            </div>
+            <div class="clearfix"></div>
+        </div>
+    </div>
+</div>
+<svg id="bigTriangleShadow" xmlns="http://www.w3.org/2000/svg" version="1.1" width="100%" height="100"
+     viewBox="0 0 100 100" preserveAspectRatio="none">
+    <path id="trianglePath1" d="M0 0 L50 100 L100 0 Z"></path>
+    <path id="trianglePath2" d="M50 100 L100 40 L100 0 Z"></path>
+</svg>
+
 <div class="about" style="background-color: #f6f6f6;">
     <br><br>
     <br><br>
