--- a/about.html
+++ b/about.html
@@ -143,6 +143,10 @@ Smartphone Compatible web template, free webdesigns for Nokia, Samsung, LG, Sony
                 </div>
                 <div class="clearfix"></div>
             </div>
+            <br>
+            <div align="center">
+                <button type="button" class="btn btn-light"><a href="services.html">En savoir plus</a></button>
+            </div>
             <div class="clearfix"></div>
         </div>
     </div>
