--- a/footer.html
+++ b/footer.html
@@ -5,16 +5,13 @@
         </ul>
         <ul class="social-icons">
             <li>
-                <a class="tooltips" href="#"><img src="images/ISO_9001.png" width="120px"
-                                                  title="facebook"/><span>Partenaire</span></a>
+                <img src="images/ISO_9001.png" width="120px"/>
             </li>
             <li>
-                <a class="tooltips" href="#"><img src="images/dogBuddy.png" width="120px"
-                                                  title="facebook"/><span>Partenaire</span></a>
+                <img src="images/dogBuddy.png" width="120px"/>
             </li>
             <li>
-                <a class="tooltips" href="#"><img src="images/royalCanin.jpg" width="120px"
-                                                  title="facebook"/><span>Partenaire</span></a>
+                <img src="images/royalCanin.jpg" width="120px"/>
             </li>
         </ul>
         <ul class="social-icons">
